fftools/ffmpeg_demux: ensure the display_rotation option is honored

If requested, it should have priotity over any coded value.
Fixes ticket #11649.

Signed-off-by: James Almer <jamrial@gmail.com>